--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,8 @@
 
 en:
   app_name: "foggly"
+  time:
+    formats:
+      default: ! '%m/%d/%y %H:%M'
+      short: ! '%m/%d/%y'
+      detailed: ! '%m/%d/%y %H:%M:%S'
