add_requests_diffs

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -50,6 +50,8 @@ en:
     index: 'Requests'
     new: 'New Request'
     show: 'Overview'
+  data_request_diff:
+    index: 'Diff with'
   user_group:
     index: 'Groups'
     new: 'New Group'
